--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -1,15 +1,8 @@
 // site.scss
 
-// 1. Your custom variables and variable overwrites.
-// @import "theme/accordion.scss";
-// @import "theme/alert.scss";
-// @import "theme/align.scss";
-// ... import all
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Sorts+Mill+Goudy:400,400i');
-@import url('https://sauassetsaws-c897.kxcdn.com/fonts/fonts-neue.gz.css');
-@import url('https://sauassetsaws-c897.kxcdn.com/fonts/fonts-neue-cond.gz.css');
 
-
+@import 'golden';
+@import 'sau-fonts';
 @import 'sau-palette';
 @import 'sau-variables';
 
